update to python:slim-bullseye container
Change from ubuntu to python container.  Divided container size by 3.

--- a/Docker files/Dockerfile
+++ b/Docker files/Dockerfile
@@ -1,12 +1,11 @@
-FROM ubuntu:latest
+FROM python:slim-bullseye
 MAINTAINER Sebastien Vanhoutte
-RUN apt-get update && apt-get -y upgrade && apt-get install -y python3 default-jre unzip python3-pip apt-utils build-essential software-properties-common byobu curl git htop man unzip vim wget libcairo2 libcairo2-dev libgirepository1.0-dev libpython3-dev meson ninja-build patchelf cmake libdbus-1-dev libgirepository1.0-dev libcairo2-dev git cron
-RUN pip3 list --outdated --format=freeze | grep -v '^\-e' | cut -d = -f 1 | xargs -n1 pip3 install -U
-RUN pip3 install wyze_sdk garmin-uploader
+RUN apt-get update &&  apt-get install --no-install-recommends -y gcc git cron libc6-dev
+RUN pip install wyze_sdk garmin-uploader
 RUN mkdir /wyze_garmin_sync
 WORKDIR /
 RUN git clone https://github.com/svanhoutte/wyze_garmin_sync.git
 WORKDIR /wyze_garmin_sync
+RUN apt-get remove -y gcc git libc6-dev
 ADD entrypoint.sh ./
 CMD /wyze_garmin_sync/entrypoint.sh
-
